--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@
     padding-top: 9rem;
     padding-bottom: 7rem;
 }
-/******reset bootstrap********/
+/******override bootstrap********/
 .navbar-brand{
 	font-size: 1rem;
 	font-weight: bold;
@@ -95,7 +95,7 @@
 }
 
 
-/*******hero section1************/
+/*******hero section************/
 .hero-head-font{
 	font-family: 'Titillium Web';
 	font-size: 59px;
@@ -137,51 +137,11 @@
 .navbar{
 	padding: 0;
 }
-.offer-slider-position .slider-card .owl-carousel .owl-dots .owl-dot {
-    height: 12px;
-    width: 20px;
-    border: unset;
-    background: #f0c775;
-    border-radius: 5px;
-    padding-right: 25px;
-    margin: 5px;
-	margin-bottom: 1rem;
-	margin-left: 18px;
 
-}
-.offer-slider-position .owl-carousel .owl-dots .owl-dot:hover {
-    height: 12px;
-    width: 35px;
-    border: unset;
-    background: #ffac00;
-    border-radius: 5px;
-    padding-right: 25px;
-    margin: 5px;
-}
-.offer-slider-position2 .slider-card .owl-carousel .owl-dots .owl-dot {
-    height: 12px;
-    width: 20px;
-    border: unset;
-    background: rgb(196, 192, 192);
-    border-radius: 5px;
-    padding-right: 25px;
-    margin: 5px;
-	margin-bottom: 1rem;
-	margin-left: 10px;
 
-}
-.offer-slider-position2 .owl-carousel .owl-dots .owl-dot:hover {
-    height: 12px;
-    width: 35px;
-    border: unset;
-    background: white;
-    border-radius: 5px;
-    padding-right: 25px;
-    margin: 5px;
-}
-/**********section2************/
+/**********MENUS************/
 
-.btn-alignment {
+.menu-btn {
     position: absolute;
     width: 170px;
     padding: 12px;
@@ -195,7 +155,6 @@
 }
 
 .slider-img-parent {
-  /*background: red;*/
   height: 140px;
 }
 .slider-img-parent img{
@@ -203,19 +162,7 @@
 	height: 100%;
 	width: 100% !important;
 	padding:  0;
-
 }
-.my-btn{
-	background:  blue;
-	padding: 20px;
-	transition: .3s;
-	border: unset;
-}
-.my-btn:hover{
-	background:yellow;
-	transition: .3s;
-}
-
 
 /*Mobile App*/
 .mobile-app{
@@ -310,10 +257,61 @@
     border: unset;
     
 }
+
 /**********OFFERS************/
-.bg-color{
-	background-color:rgb(213 137 73 / 34%);
+.offer-backgroud{
+	 background-color:rgb(252 223 196 / 39%);
+	 position: relative;
 }
+.offer-slider-position .slider-card .owl-carousel .owl-dots .owl-dot {
+    height: 12px;
+    width: 20px;
+    border: unset;
+    background: #f0c775;
+    border-radius: 5px;
+    padding-right: 25px;
+	margin-bottom: 1rem;
+	margin-left: 8px;
+
+}
+.offer-slider-position .owl-carousel .owl-dots .owl-dot:hover {
+    height: 12px;
+    width: 35px;
+    border: unset;
+    background: #ffac00;
+    border-radius: 5px;
+    padding-right: 25px;
+   transition: width 1s;
+}
+.offer-slider-position2 .slider-card .owl-carousel .owl-dots .owl-dot {
+    height: 12px;
+    width: 20px;
+    border: unset;
+    background: rgb(196, 192, 192);
+    border-radius: 5px;
+    padding-right: 25px;
+	margin-bottom: 1rem;
+	margin-left: 8px;
+
+}
+.offer-slider-position2 .owl-carousel .owl-dots .owl-dot:hover {
+    height: 12px;
+    width: 35px;
+    border: unset;
+    background: white;
+    border-radius: 5px;
+    padding-right: 25px;
+	transition: width 1s;
+   
+}
+.offer-slider-position .slider-card .owl-carousel .owl-dots{
+	margin-left: 21px;
+}
+.offer-slider-position2 .slider-card .owl-carousel .owl-dots{
+	margin-left: 21px;
+}
+
+
 .card-red{
 	background-color: #e80b2ed1;
 	border-radius: 15px;
@@ -322,9 +320,7 @@
 .card-heading{
 	font-size: 15px;
 }
-.btn-padding{
-	padding-top: 5.5rem;
-}
+
 .offer-slider-position {
 	position: relative;
    
@@ -333,7 +329,7 @@
 	position: relative;
    
 }
-.offer-card-para{
+.offer-card-para-font{
 	padding: 23px;
 	font-size: 31px;
 	font-weight: 600;
@@ -406,7 +402,46 @@
     width: 294px;
     border-radius: 80px;
 }
-/**********section-4 overlap images************/
+.offer-back-circle{
+	position: absolute;
+    background-color: #c6af9442;
+    height: 491px;
+    width: 515px;
+    border-radius: 295px;
+    top: -182px;
+    align-items: center;
+    z-index: -1;
+    right: -113px;
+}
+.offer-circle-donut{
+	position: absolute;
+    background-color: #c6af9442;
+    height: 419px;
+    width: 425px;
+    border-radius: 222px;
+    bottom: 0;
+    align-items: center;
+    left: -182px;
+    z-index: -1;
+    top: -32px;
+    bottom: -78px;
+}
+.offer-inside-donut{
+    position: absolute;
+    background-color: rgb(252 223 196 / 39%);
+    height: 243px;
+    width: 254px;
+    border-radius: 162px;
+    top: 56px;
+    bottom: 0;
+    align-items: center;
+    left: -97px;
+    z-index: -1;
+}
+.offer-btn-mb{
+	margin-bottom: 40px;
+}
+/**********overlap images************/
   .imgA1 {
 	width: 100%;
 	
@@ -584,7 +619,7 @@ left: 15px;
 .back{
 	background-color: white;
     height: 100%;
-    width: 130%;
+    width: 100%;
     position: relative;
     border-radius: 35px;
 	
@@ -605,6 +640,12 @@ left: 15px;
 }
 .footer-color{
 	background-color: #e7170c;
+}
+.pl{
+	padding-left:3.5rem ;
+}
+.pr{
+	padding-right: 1.5rem;
 }
 /**************backgruod effects***************/
 .circle{
@@ -684,9 +725,43 @@ left: 15px;
     right: -85px;
    
 }
+
 .py-4{
 	padding-bottom: 1rem !important;
 }
 .py-3{
 	padding-bottom: 4rem !important;
 }
+.overlay {
+	position: absolute; 
+	bottom: 0; 
+	background: rgb(0, 0, 0);
+	background: rgba(0, 0, 0, 0.5); /* Black see-through */
+	color: #f1f1f1; 
+	width: 100%;
+	transition: .5s ease;
+	opacity:0;
+	color: white;
+	font-size: 20px;
+	padding: 20px;
+	text-align: center;
+  }
+.image{
+	display: block;
+	width: 100%;
+	height: auto;
+}
+.img-overlay:hover .overlay {
+	opacity: 1;
+  }
+  .slider-img-parent:hover::after {
+	content: "";
+	position: absolute;
+	left: 2%;
+	right: 2%;
+	bottom: 0;
+	border: 3px solid red;
+	border-radius: 10px;
+  }
+ 
+  
